--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="Personal/assets/img/arabic.jpg" class="img-fluid border rounded-5" alt="">
+          <img src="assets/img/arabic.jpg" class="img-fluid border rounded-5" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Video Editor &amp; Web Developer</h3>
