--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               <h4>Video 10+</h4>
               <p>Edit</p>
               <div class="portfolio-links">
-                <a href="/Personal/assets/img/Untitled design.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/Untitled design.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="https://www.instagram.com/iron_sheild_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -337,12 +337,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="/Personal/assets/img/templerun.png" class="img-fluid" alt="">
+            <img src="assets/img/templerun.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 1</h4>
               <p>Web</p>
               <div class="portfolio-links">
-                <a href="/Personal/assets/img/templerun.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/templerun.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="https://abdullah-althaf.github.io/imangi-studios/"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -351,12 +351,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
-            <img src="/Personal/assets/img/zomato.png" class="img-fluid" alt="">
+            <img src="assets/img/zomato.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 2</h4>
               <p>Web</p>
               <div class="portfolio-links">
-                <a href="/Personal/assets/img/zomato.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/zomato.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <a href="https://abdullah-althaf.github.io/zomato-clone/"><i class="bx bx-link"></i></a>
               </div>
             </div>
