--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
 
       <h1><a href="index.html">Abdullah Althaf</a></h1>
-      <h2>I'm a passionate <span>web developer</span> from KERALA</h2>
+      <h2>I'm a passionate <span>web developer</span> from INDIA</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -51,10 +51,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="https://x.com/abdullahal66464?s=21" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://www.facebook.com/share/tqDphpQYVTec5Ra6/?mibextid=%22%22" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/me_luthfy__?igsh=emxwMTIzZnhncXpq&utm_source=qr" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/abdullah-althaf-947003311?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/abdullahal66464?s=21" target="blank" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.facebook.com/share/tqDphpQYVTec5Ra6/?mibextid=%22%22" target="blank" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/me_luthfy__?igsh=emxwMTIzZnhncXpq&utm_source=qr" target="blank" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/abdullah-althaf-947003311?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -329,7 +329,7 @@
               <p>Edit</p>
               <div class="portfolio-links">
                 <a href="assets/img/Untitled design.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="https://www.instagram.com/iron_sheild_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="bx bx-link"></i></a>
+                <a href="https://www.instagram.com/iron_sheild_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="blank" ><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -343,7 +343,7 @@
               <p>Web</p>
               <div class="portfolio-links">
                 <a href="assets/img/templerun.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="https://abdullah-althaf.github.io/imangi-studios/"><i class="bx bx-link"></i></a>
+                <a href="https://abdullah-althaf.github.io/imangi-studios/" target="blank" ><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -357,7 +357,7 @@
               <p>Web</p>
               <div class="portfolio-links">
                 <a href="assets/img/zomato.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="https://abdullah-althaf.github.io/zomato-clone/"><i class="bx bx-link"></i></a>
+                <a href="https://abdullah-althaf.github.io/zomato-clone/" target="blank" ><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -391,10 +391,10 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://x.com/abdullahal66464?s=21" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="https://www.facebook.com/share/tqDphpQYVTec5Ra6/?mibextid=%22%22" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/me_luthfy__?igsh=emxwMTIzZnhncXpq&utm_source=qr" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/abdullah-althaf-947003311?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://x.com/abdullahal66464?s=21" target="blank" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.facebook.com/share/tqDphpQYVTec5Ra6/?mibextid=%22%22" target="blank" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/me_luthfy__?igsh=emxwMTIzZnhncXpq&utm_source=qr" target="blank" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/abdullah-althaf-947003311?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -446,7 +446,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://www.instagram.com/me_luthfy__/?hl=en">MeLuthfy</a>
+    Designed by <a href="https://www.instagram.com/me_luthfy__/?hl=en" target="blank">MeLuthfy</a>
   </div>
 
   <!-- Vendor JS Files -->
